[gd_scene load_steps=6 format=3 uid="uid://bxcp84mlg58qe"]

[ext_resource type="Script" path="res://Scrips/Jogo de tabuleiro/jogo_de_tabuleiro.gd" id="1_3fbvw"]
[ext_resource type="Texture2D" uid="uid://fwoaoqp7epn8" path="res://assents/Cenarios/Cenas Jogo/Ato 1/Casa_Cena 2/Cenarios/ac01f481c6e3b1ba929d4898423176ff.jpg" id="1_ffth1"]
[ext_resource type="Texture2D" uid="uid://cf1hmq8d2rhgm" path="res://assents/Cenarios/Cenas Jogo/Ato 1/Casa_Cena 2/Cenarios/Tela branca.jpg" id="2_p20d6"]
[ext_resource type="Theme" uid="uid://bje24vjgkssut" path="res://assents/Fontes e Temas/Menu/menuTema.tres" id="3_yrlj3"]
[ext_resource type="FontFile" uid="uid://cgygq4u5j0y1w" path="res://assents/Fontes e Temas/Menu/RevMiniPixel.ttf" id="4_q5xne"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3fbvw")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1291.0
offset_bottom = 808.0
scale = Vector2(1.3, 1.3)

[node name="Node2D" type="Node2D" parent="BG"]

[node name="Camada 1" type="Sprite2D" parent="BG/Node2D"]
position = Vector2(641.538, 316.923)
scale = Vector2(2.3, 2.3)
texture = ExtResource("1_ffth1")

[node name="Camada 2" type="Sprite2D" parent="BG/Node2D"]
position = Vector2(648.462, 555.385)
scale = Vector2(2.31036, 0.626557)
texture = ExtResource("2_p20d6")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -203.0
offset_right = 194.0
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
texture_filter = 1
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("3_yrlj3")
theme_override_font_sizes/font_size = 20
text = "Sa√∫de "

[node name="ButtonIncrem" type="Button" parent="MarginContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_yrlj3")
theme_override_fonts/font = ExtResource("4_q5xne")
theme_override_font_sizes/font_size = 20
text = "+"

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_yrlj3")
theme_override_font_sizes/font_size = 20
text = "100"

[node name="ButtonSubtr" type="Button" parent="MarginContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_yrlj3")
theme_override_fonts/font = ExtResource("4_q5xne")
theme_override_font_sizes/font_size = 20
text = "-"

[node name="Label3" type="Label" parent="MarginContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("3_yrlj3")
theme_override_font_sizes/font_size = 20
text = "5R$"

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 412.0
offset_right = 89.0
offset_bottom = 452.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_yrlj3")
theme_override_font_sizes/font_size = 20
text = "VALOR ATUAL: "

[node name="ValorTotal" type="Label" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_yrlj3")
theme_override_font_sizes/font_size = 20

[connection signal="pressed" from="MarginContainer/HBoxContainer/ButtonIncrem" to="." method="_on_button_increm_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ButtonIncrem" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ButtonSubtr" to="." method="_on_button_subtr_pressed"]
